# smashlang

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  TESTING.md  TODO-PKGS.md  TODO.FEATURES.md  TODO.md  a.out  a.out.c  add_git_hash.sh  build.rs  build.sh  copy_docs.sh  create_minimal_tests.sh  create_package_tests.sh  create_simple_tests.sh  debug_codegen.rs  debug_test.rs  direct_install.sh  direct_test.c  example  example.c  example.smash  fix_git_hash.sh  fix_install_master_tests.sh  fix_install_script.sh  fix_install_tests.sh  fix_install_with_logging.sh  fix_installer.sh  fix_installer_function_order.sh  fixed_install.sh  fixed_installer.sh  git_hash.txt  hello.smash  install.sh  install.sh.bak  install.sh.original  install_and_test.sh  (+24 more)
.github/workflows/: ci.yml
assets/: favicon.txt  logo.ascii
docs/: INSTALLATION.md  README.md  TESTING.md  control_flow.md  hardware_interfaces.md  linux_compilation.md  package_repo_structure.md  std_os_hooks.md  std_process.md  test_all_examples.sh  wasm_support.md
docs/getting-started/: 01_hello_world.smash  02_variables.smash  03_conditionals.smash  04_loops.smash  05_functions.smash  06_combined_features.smash  GUIDE.md  README.md  first-program.md  installation.md  language-basics.md  repl.md  run_all_examples.sh
docs/hardware/: input.md  overview.md
docs/hardware/examples/: input_tester.smash  keyboard_monitor.smash  mouse_tracker.smash  touch_visualizer.smash
docs/implementation/: classes.md  data-structures.md  modern-js-features.md  modules.md  promises.md  runtime-features.md
docs/language/: control-flow.md  destructuring.md  error-handling.md  functions.md  modules.md  object-enhancements.md  pattern-matching.md  syntax.md  types.md
docs/language/examples/: control-flow.smash  destructuring.smash  error-handling.smash  functions.smash  modules.smash  object-enhancements.smash  pattern-matching.smash  syntax.smash  test_all.sh  types.smash
docs/os_hooks/examples/: file_system.smash  process_management.smash
docs/wasm/examples/: hello_wasm.smash
examples/: a.out  a.out.c  array_methods.smash  async_example.smash  basic.smash  basic_regex_test.smash  class_example.smash  cli_example.smash  collections_example.smash  complex_regex_test.smash  control_flow.smash  debug_test.smash  final_regex_test.smash  hardware_demo.smash  hardware_example.smash  hello.smash  language_features.smash  methods_demo.smash  modern_features_example.smash  modules_example.smash  network_example.smash  os_hooks_example.smash  pocketbase_example.smash  practical_control_flow.smash  process_example.smash  promise_example.smash  regex.smash  regex_demo.smash  regex_features_test.smash  regex_flags_test.smash  runtime_features_example.smash  simple_cli.smash  simple_regex.smash  simple_string.smash  simplified_regex.smash  string_pattern.smash  template_and_arrow.smash  template_and_ternary.smash
examples/testing/: basic.test.smash  control_flow.test.smash
examples/wasm/: hello_wasm.smash
native/hardware/: Cargo.toml
native/hardware/src/: camera.rs  error.rs  input.rs  lib.rs  microphone.rs  screen.rs  utils.rs
native/hardware/src/devices/: bluetooth.rs  gamepad.rs  midi.rs  mod.rs  usb.rs
native/hardware/src/platform/: android.rs  android_screen_impl.rs  common.rs  input.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
native/hardware/src/platform/linux/: input.rs  mod.rs
runtime/: index.js  native_os_hooks.js  native_process.js
scripts/: ascii_settings.sh  build.sh  compile_wasm.sh  cross_compile.sh  fix_icon_colors.sh  fix_smash_syntax.sh  generate_favicon.sh  generate_logo_ascii.sh  generate_package_logo.sh  generate_themed_ascii.sh  install_linux.sh  install_package.sh  run_tests.sh
smashlang_external/vscode-smashier/: INSTALLATION.md  README.md  extension.js  getTokenInfo.js  language-configuration.json  package.json
smashlang_external/vscode-smashier/syntaxes/: smashlang.tmLanguage.json
smashlang_packages/: README.md
smashlang_packages/__package__template/: GUIDE.md  README.md  THEME_GUIDE.md  package.smash  package_config.json  postinstall.smash  preinstall.smash
smashlang_packages/__package__template/assets/: logo.txt
smashlang_packages/__package__template/examples/: advanced.smash  basic.smash  hello.smash  logo.txt  testing.smash
smashlang_packages/__package__template/src/: index.smash
smashlang_packages/community/: GUIDE.md  logo.txt  package.smash
smashlang_packages/community/assets/: README.md  (+2 more)
smashlang_packages/core/: GUIDE.md  package.smash
smashlang_packages/database/: GUIDE.md  package.smash
smashlang_packages/hardware/: GUIDE.md  package.smash
smashlang_packages/networking/: GUIDE.md  package.smash  package_config.json
smashlang_packages/stdio/: GUIDE.md  README.md  package.smash
smashlang_packages/test-package/: .gitignore  GUIDE.md  README.md  package.json  package.smash
smashlang_packages/tools/: GUIDE.md  logo.dark.txt  logo.txt  package.smash  postinstall.smash
src/: codegen.rs  codegen.test.rs  compiler.rs  grammar.pest  grammar.pest.new  interpreter.rs  interpreter.rs.bak  lexer.rs  lib.rs  main.rs  parser.rs  parser.rs.new  parser_methods.rs  regex.c  repl.rs  runtime.c  runtime.h  runtime.rs  runtime_regex.rs  simple_regex.c  simple_regex.h  smashc.rs  smashpkg.rs  smashtest.rs  testing.rs
src/interpreter/: core.rs  environment.rs  function.rs  mod.rs  value.rs
src/lexer/: core.rs  mod.rs  tests.rs  token.rs  utils.rs
src/parser/: ast.rs  core.rs  methods.rs  mod.rs
src/runtime/: browser.rs  class.rs  collections.rs  json.rs  mod.rs  module.rs  operators.rs  promise.rs  regex.rs  timers.rs
src/tests/: codegen_tests.rs  parser_tests.rs
std/: json.smash  net.smash
tests/: basic.rs  class_test.rs  codegen_test.rs  codegen_tests.rs  collections_test.rs  compiler_test.rs  lexer_parser_tests.rs  lexer_test.rs  mod.rs  modern_features_test.rs  module_test.rs  parser_test.rs  promise_test.rs  runtime_features_test.rs
tools/: fix_syntax.sh  fix_syntax.smash  smashpkg.smash
(+297 files in other folders)
