[package]
name = "smashlang"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm15-0"], optional = true }
anyhow = "1.0"
rustyline = "11.0.0"  # For improved REPL input handling
colored = "2.0.0"    # For colored terminal output
chrono = "0.4"      # For date and time functionality
regex = "1.9.5"     # For regular expression support
serde_json = "1.0"   # For JSON serialization/deserialization

[build-dependencies]
cc = "1.0.79"      # For compiling C code

[dev-dependencies]
tempfile = "3.5.0"  # For temporary file handling in tests

[features]
default = []
compiler = ["inkwell"]

[lib]
name = "smashlang"
path = "src/lib.rs"

[[bin]]
name = "smash"
path = "src/main.rs"

[[bin]]
name = "smashpkg"
path = "src/smashpkg.rs"

[[bin]]
name = "smashc"
path = "src/smashc.rs"

[[bin]]
name = "smashtest"
path = "src/smashtest.rs"
