[package]
name = "smashlang"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm15-0"], optional = true }
anyhow = "1.0"
rustyline = "11.0.0"  # For improved REPL input handling
colored = "2.0.0"    # For colored terminal output
chrono = "0.4"      # For date and time functionality
regex = "1.9.5"     # For regular expression support
serde_json = "1.0"   # For JSON serialization/deserialization
rand = "0.8"        # Added for unique names in codegen

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"  # For macOS Core Foundation bindings
core-graphics = { version = "0.22", optional = true }  # For macOS graphics
objc = { version = "0.2", features = ["exception"] }  # For Objective-C runtime
avfoundation = { version = "0.1", optional = true }  # For macOS AVFoundation

[build-dependencies]
cc = "1.0.79"      # For compiling C code
pkg-config = "0.3.27"  # For finding system libraries like PCRE

[dev-dependencies]
tempfile = "3.5.0"  # For temporary file handling in tests

[features]
default = ["macos-support"]
compiler = ["inkwell"]
macos-support = ["core-graphics", "avfoundation"]
core-graphics = ["dep:core-graphics"]
avfoundation = ["dep:avfoundation"]

[lib]
name = "smashlang"
path = "src/lib.rs"

[[bin]]
name = "smash"
path = "src/main.rs"

[[bin]]
name = "smashpkg"
path = "src/smashpkg.rs"

[[bin]]
name = "smashc"
path = "src/smashc.rs"

[[bin]]
name = "smashtest"
path = "src/smashtest.rs"
