[package]
name = "smashlang"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A JavaScript-like programming language in Rust"
license = "MIT"
repository = "https://github.com/yourusername/smashlang"
readme = "README.md"
keywords = ["language", "compiler", "interpreter", "javascript", "wasm"]
categories = ["compilers", "development-tools", "wasm"]

[dependencies]
# Lexer
logos = "0.13.0"

# Parser
pest = "2.8.0"
pest_derive = "2.8.0"

# Standard library helpers
chrono = "0.4.31"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"

# CLI
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.0.4"
rustyline = "11.0.0"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["jit"]
jit = []
wasm = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "smash"
path = "src/main.rs"

[[bin]]
name = "smashc"
path = "src/smashc.rs"

[lib]
name = "smashlang"
path = "src/lib.rs"
